--- a/shippable.yml
+++ b/shippable.yml
@@ -21,7 +21,10 @@ matrix:
         - key3=bbbb
   exclude:
     - node_js: "4.2.3"
-  
+    - node_js: "0.12"
+    - node_js: "iojs-v2"
+    - node_js: "iojs-v3"
+      
 build:
   ci:
     - node --version
