--- a/shippable.yml
+++ b/shippable.yml
@@ -3,12 +3,16 @@ language: node_js
 # Version number
 node_js:
   - 0.10
-  - 0.12
-  - 4.2.3
-  - iojs-v1
-  - iojs-v2
-  - iojs-v3
-  - 5.0
+#  - 0.12
+ # - 4.2.3
+  #- iojs-v1
+  #- iojs-v2
+  #- iojs-v3
+  #- 5.0
+  
+branches:
+  only:  
+    - "testbr"
 
 build:
   ci:
