--- a/shippable.yml
+++ b/shippable.yml
@@ -4,16 +4,12 @@ language: node_js
 node_js:
   - 0.10
   - 0.12
-  - 4.2.3
-  - iojs-v1
-  - iojs-v2
-  - iojs-v3
-  - 5.0
+  
   
 env:
-  - TO$O=FOO
+  - &TOO=FOO
 
 build:
   ci:
     - node --version
-    - echo "$TO$O"
+    - echo "$&TOO"
